--- a/monitoramento-de-temperatura/server/public/room.html
+++ b/monitoramento-de-temperatura/server/public/room.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="src/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="src/css/font-awesome.min.css">
-             <!-- Favicon padrão -->
+    <!-- Favicon padrão -->
     <link rel="icon" type="image/x-icon" href="src/img/icons/favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="src/img/icons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="src/img/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="48x48" href="src/img/icons/favicon-48x48.png">
     <link rel="apple-touch-icon" sizes="180x180" href="src/img/icons/apple-touch-icon-180x180.png">
-        <!----------->
+    <!----------->
     <title>Monitoramento de Temperatura</title>
 </head>
 
@@ -37,6 +37,22 @@
             <canvas width="600" height="200" id="umidChart" class="chart-background"></canvas>
         </div>
     </div>
+
+    <dialog id="modalLogout">
+        <div class="modalDelete">
+            <h3>Confirmação</h3>
+
+            <div class="deleteRow">
+                <p id="logoutMessage"></p>
+
+            </div>
+        </div>
+        <div class="deleteBtn">
+            <button type="button" class="btn-primary" id="logoutNo">Cancelar</button>
+            <button type="button" class="btn" id="logoutYes">Ok</button>
+        </div>
+    </dialog>
+
 
     <script src="src/js/components/jwt/jwt-decode.min.js"></script>
     <script type="text/javascript" src="src/js/components/gauge/raphael-min.js"></script>
