style(admin): ajustes de cores e layout na pagina do admin

--- a/monitoramento-de-temperatura/server/public/admin.html
+++ b/monitoramento-de-temperatura/server/public/admin.html
@@ -7,7 +7,7 @@
     <link href="src/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="src/css/font-awesome.min.css">
          <!-- Favicon padrão -->
-    <link rel="icon" type="image/x-icon" href="src/img/icons/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="src/img/icons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="src/img/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="48x48" href="src/img/icons/favicon-48x48.png">
