--- a/monitoramento-de-temperatura/server/public/room.html
+++ b/monitoramento-de-temperatura/server/public/room.html
@@ -19,8 +19,8 @@
 <body class="hide">
 
 
-    <nav>
-        <a href="index.html"><img src="src/img/logo2.png"></a>
+    <nav id="navbar">
+        <a id="link"><img src="src/img/logo2.png"></a>
         <h1>Monitoramento de Temperatura</h1>
         <div class="icons">
             <!-- <a href="relatorio.html" title="Relatório"><i class="fa fa-file-excel-o"></i></a> -->
