--- a/monitoramento-de-temperatura/server/public/admin.html
+++ b/monitoramento-de-temperatura/server/public/admin.html
@@ -95,18 +95,32 @@
                 <label for="email">E-mail</label>
                 <input type="email" id="emailEdit" name="email" required>
 
-                <label for="password1">Senha</label>
-                <input type="password" id="senhaEdit" name="senha" required>
-
-                <label for="password2">Confirmar Senha</label>
-                <input type="password" id="senha2Edit" name="senha2" required>
-
                 <p id="responseUserEdit" class="alert"></p>
 
                 <button type="button" id="userEditBtn" class="btn-primary">Atualizar</button>
                 <button type="button" id="editCloseBtn" class="btn">Fechar</button>
             </form>
         </dialog>
+
+        <!-- Modal Editar Senha Usuário-->
+        <dialog id="modalPassEdit" tabindex="-1">
+            <h1>Editar</h1>
+            <form id="passFormEdit">
+                <label for="currentPass">Senha atual</label>
+                <input type="password" id="currentPass" name="currentPassword" required>
+
+                <label for="newPass">Nova senha</label>
+                <input type="password" id="newPass" name="newPassword" required>
+
+                <label for="confirmPass">Confirmar nova senha</label>
+                <input type="password" id="confirmPass" name="confirmPassword" required>
+
+                <p id="responsePassEdit" class="alert"></p>
+
+                <button type="button" id="passEditBtn" class="btn-primary">Atualizar</button>
+                <button type="button" id="passCloseBtn" class="btn">Fechar</button>
+            </form>
+        </dialog>        
 
 
         <!-- Modal Cadastrar Ambiente-->
